src/test/deca/context/valid/provided/testNameField.deca
class A{
int setX(int x , float y, boolean b){
}
}
