src/test/deca/context/invalid/provided/testi34.deca
class A{
    boolean b;
}
{
    int x;
    A a = new A();
    print(a.x);
}